New item at top. Commit only changes.
Placing new item at the top of the list, and leaving it open for edit.
Only changes to fields are actually stored.

--- a/web/components/toodles-due.html
+++ b/web/components/toodles-due.html
@@ -76,7 +76,17 @@
       }
 
       onBlur( evt ) {
-        this.send();
+        if( this.$.field.value.trim().length == 0 ) {
+          this.value = 0;
+
+          this.dispatchEvent( new CustomEvent( Due.CHANGE, {
+            detail: {
+              due: 0
+            }
+          } ) );                   
+        } else {
+          this.send();
+        }
       }
 
       doLoad( evt ) {
