--- a/web/components/toodles-filter.html
+++ b/web/components/toodles-filter.html
@@ -100,9 +100,11 @@
       doChange( evt ) {
         // Left in case calendar
         // console.log( this.$.calendar.selected );
-        console.log( this.$.location.selected );
-        console.log( this.$.duration.index );        
-        console.log( this.$.energy.index );        
+        console.log( {
+          location: this.$.location.selected.id,
+          duration: this.$.duration.index,
+          energy: this.$.energy.index
+        } );
 
         this.dispatchEvent( new CustomEvent( Filter.CHANGE, {
           detail: {
