--- a/bluemix/public/components/toodles-authentication.html
+++ b/bluemix/public/components/toodles-authentication.html
@@ -39,7 +39,7 @@
       }
 
       button.loading {
-        background-image: url( /img/loading.svg );
+        background-image: url( /img/loading.white.svg );
         background-position: 16px center;
         background-repeat: no-repeat;
         background-size: 20px;
