--- a/bluemix/public/components/toodles-message.html
+++ b/bluemix/public/components/toodles-message.html
@@ -61,6 +61,7 @@
 
         this.$.field.placeholder = 'Location';
         this.$.field.return = true;
+        this.$.field.focus();
       }      
 
       hide() {
