--- a/bluemix/public/components/toodles-item.html
+++ b/bluemix/public/components/toodles-item.html
@@ -47,13 +47,52 @@
         border-left: solid 1px rgba( 0, 0, 0, 0.12 );
       }
 
+      #forward {
+        background-image: url( /img/forward.black.svg );
+      }            
+
       #location {
         border-left: solid 1px rgba( 0, 0, 0, 0.12 );
       }
 
+      #options {
+        border-left: solid 1px rgba( 0, 0, 0, 0.12 );                
+        display: none;
+        flex-direction: row;
+      }
+
+      #options div {
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: 24px;
+        height: 48px;
+        opacity: 0.54;
+        width: 48px;        
+      }
+
+      #options div:hover {
+        opacity: 1;
+      }
+
+      #summary {
+        display: flex;
+        flex-direction: row;
+        flex-grow: 1;
+        height: 48px;        
+      }
+
+      #trash {
+        background-image: url( /img/trash.black.svg );
+      }            
+
       .details {
         display: none;
         flex-direction: column;        
+      }
+
+      .bar {
+        display: flex;
+        flex-direction: row;
       }
 
       .label {
@@ -84,12 +123,6 @@
         flex-direction: row;
       }
 
-      .summary {
-        display: flex;
-        flex-direction: row;
-        height: 48px;        
-      }
-
       .tags {
         background-image: url( /img/offer.black.svg );
         background-position: center;
@@ -100,16 +133,22 @@
         width: 48px;        
       }
     </style>
-    <div class="summary">
-      <toodles-complete id="complete" on-complete_change="onCompleteChange"></toodles-complete>
-      <input 
-        id="label" 
-        class="label" 
-        on-focus="onLabelFocus" 
-        on-blur="onLabelBlur" 
-        on-keypress="onLabelKey">
-      <toodles-tags id="summary_tags" on-tags_change="onTagsChange"></toodles-tags>
-      <toodles-remain id="remain"></toodles-remain>
+    <div class="bar">
+      <div id="summary">
+        <toodles-complete id="complete" on-complete_change="onCompleteChange"></toodles-complete>
+        <input 
+          id="label" 
+          class="label" 
+          on-focus="onLabelFocus" 
+          on-blur="onLabelBlur" 
+          on-keypress="onLabelKey">
+        <toodles-tags id="summary_tags" on-tags_change="onTagsChange"></toodles-tags>
+        <toodles-remain id="remain"></toodles-remain>
+      </div>    
+      <div id="options">
+        <div id="trash" on-click="onTrash"></div>        
+        <div id="forward" on-click="onForward"></div>
+      </div>
     </div>
     <div id="details" class="details">
       <div class="row">
@@ -147,9 +186,14 @@
 
       connectedCallback() {
         super.connectedCallback();
+        
         this._task = null;
         this.opened = false;
+        
         this.$.detail_tags.editable = true;
+
+        this.addEventListener( 'mouseover', evt => this.doOver( evt ) );
+        this.addEventListener( 'mouseleave', evt => this.doLeave( evt ) );
       }
 
       set task( value ) {
@@ -160,10 +204,10 @@
 
         // Adjust opacity for completed
         if( this._task.complete ) {
-          this.style.opacity = 0.38;
+          this.$.summary.style.opacity = 0.38;
           this.$.remain.hide();
         } else {
-          this.style.opacity = 1;
+          this.$.summary.style.opacity = 1;
           this.$.remain.show();
         }
 
@@ -206,14 +250,15 @@
 
       close() {
         this.$.label.blur();
+        this.$.options.style.display = 'none';
         this.$.details.style.display = 'none';
         this.$.summary_tags.show();
 
         if( this.task.complete ) {
-          this.style.opacity = 0.38;
+          this.$.summary.style.opacity = 0.38;
           this.$.remain.hide();
         } else {
-          this.style.opacity = 1;
+          this.$.summary.style.opacity = 1;
 
           if( this.task.due > 0 ) {
             this.$.remain.show();
@@ -250,9 +295,10 @@
       }
 
       open() {
-        this.style.opacity = 1;
+        this.$.summary.style.opacity = 1;
         this.$.summary_tags.hide();
         this.$.remain.hide();
+        this.$.options.style.display = 'flex';                        
         this.$.details.style.display = 'flex';        
 
         this.opened = true;
@@ -262,22 +308,36 @@
         this.style.display = 'flex';
       }
 
+      doLeave( evt ) {
+        if( !this.opened ) {
+          this.$.options.style.display = 'none';
+        }        
+      }
+
+      doOver( evt ) {
+        this.$.options.style.display = 'flex';        
+      }
+
       onCompleteChange( evt ) {
         this.task.complete = evt.detail.selected;
         model.taskEdit( this.task );
 
         if( this.task.complete ) {
           if( !this.opened ) {
-            this.style.opacity = 0.38;
+            this.$.summary.style.opacity = 0.38;
             this.$.remain.hide();
           }
         } else {
-          this.style.opacity = 1;
+          this.$.summary.style.opacity = 1;
 
           if( !this.opened ) {
             this.$.remain.show();
           }
         }        
+      }
+
+      onForward( evt ) {
+        console.log( 'Forward.' );
       }
 
       onLabelBlur( evt ) {
@@ -323,6 +383,11 @@
 
           this.$.add_tag.value = '';
         }
+      }
+
+      onTrash( evt ) {
+        model.taskDelete( this.task );
+        this.remove();
       }
 
       onDue( evt ) {
