--- a/bluemix/public/components/toodles-menu.html
+++ b/bluemix/public/components/toodles-menu.html
@@ -16,7 +16,7 @@
 
       ::slotted( p ) {
         color: rgba( 0, 0, 0, 0.87 );
-        cursor: none;
+        cursor: default;
         flex-basis: 0;
         flex-grow: 1;
         font-size: 14px;
